  pack-based repositories.  Older repositories will still raise an error
  in this case.  Subclasses of ``Repository`` can still override
  ``Repository._refresh_data``, but are now responsible for raising
  ``bzrlib.repository.IsInWriteGroupError`` if they do not support
  ``refresh_data`` during a write group.
  (Andrew Bennetts, #574236)

Internals
*********

* ``_remember_remote_is_before`` no longer raises AssertionError when
  suboptimal network behaviour is noticed; instead it just mutters to the
  log file (and warns the user if they have set the ``hpss`` debug flag).
  This was causing unnecessary aborts for performance bugs that are minor
  at worst.
  (Andrew Bennetts, #528041)

* Permit bzr to run under ``python -OO`` which reduces the size of bytecode
  files loaded from disk. To ensure docstrings needed for help are never
  stripped, the prefix ``__doc__ =`` should now be used.
  (Martin <gzlist@googlemail.com>)

Testing
*******

* ``bzr selftest --parallel=subprocess`` now works correctly on win32.
   (Gordon Tyler, #551332)

* Workaround ``Crypto.Random`` check leading to spurious test
  failures on Lucid, FreeBSD and gentoo.  
  (Vincent Ladeuil, #528436)

bzr 2.2b2
#########

:2.2b2: 2010-04-16

This is a somewhat early second beta of the 2.2 series, to fix a python2.4
incompatibility in the 2.2b1 release.  It also includes a swag of
performance, usability and correctness improvements: test feedback on all
of these would be welcome.


New Features
************

* ``bzr diff`` now supports a --format option, which can be used to 
  select alternative diff formats. (Jelmer Vernooij, #555994)

Bug Fixes
*********

* ``bzr dpush``, ``bzr push`` and ``bzr send`` will now issue a warning
  instead of failing when dirty trees are involved. The corresponding
  ``dpush_strict``, ``push_strict`` and ``send_strict`` should be set to
  True explicitly to get the previous behaviour.  
  (Vincent Ladeuil, #519319)
